--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,6 +4,9 @@ html,
 body,
 #root {
   background-color: rgb(61, 58, 58);
+  font-family: 'Inter', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
   color: white;
   width: 100%;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
